presentation/src/App.css
.App {
  text-align: center;
  background-color: #090809;
  color:#F4998D;
  -webkit-transition: background-color 500ms linear;
}

.App-logo {
  height: 40vmin;
  pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
header{
  margin-bottom: 2rem;
}
.circle {
  width: 500px;
  height: 500px;
  display:inline-grid;
  border-radius: 50%;
  margin:5px;
  font-size: 50px;
  color: #090809;
  background: #F44E3F;
  line-height: 500px;
  /*align-items: center;*/
  /*text-align: center;*/
  text-align: center;
  vertical-align: middle;
  line-height: 500px;  
}

.my-icon{
  color:#F40000;
}
.fa-disabled {
  opacity: 0.6;
  cursor: not-allowed;
}

.fullScreen {
  height: 100vh; 
  align-items:center;
  display:grid;
}

/*background color*/
.black{/*smoky-black:#090809*/
  background-color: #090809;
  color:#F4796B;
  -webkit-transition: background-color 500ms linear;
}
.red{
  /*background-color: #F40000;
  -webkit-transition: background-color 500ms linear;*/
}
.pink{
 /* background-color: #F44E3F;
  -webkit-transition: background-color 500ms linear;*/
}
.coral-reef{/*#F4796B;*/
  background-color: #F4796B;
  color:#090809;
  -webkit-transition: background-color 500ms linear;
}
.tangerine{
  background-color: #F4998D;
  color:#090809;
  -webkit-transition: background-color 500ms linear;
}

